9/17/11 #3088 code review: document why specific molecule locations were chosen
9/17/11 #3088 code review: note the potential for Jmol maintenance issues in implementation notes
9/17/11 #3088 code review: use Jmol log level=FATAL for production, level=WARN for dev
# 1.00.00 (56978) Sep 27, 2011
9/27/11 delete TODO.txt, all future work will be tracked via Unfuddle
9/26/11 #3092, workaround for "play area visibly resizes at startup on Mac"
# 0.00.27 (56960) Sep 26, 2011
9/26/11 first pass at model.txt
9/26/11 design doc snapshot checked into SVN
9/26/11 screenshot for website
9/26/11 fix left justification of View check boxes
9/23/11 more requested changes to credits.txt
9/23/11 fix typos in credits.txt
# 0.00.26 (56915) Sep 23, 2011
9/23/11 tweak "Three Atoms" play area layout to make sure we have room for control panel translations
9/23/11 slight tweak to 2D dipole arrow heads to make them look more like Jmol dipoles
9/23/11 add icons next to dipole check boxes
9/23/11 change request: add bond to tiny molecule in Bond Character indicator
9/23/11 reviewed and addressed results of IntelliJ "Locate Duplicates"
9/23/11 reviewed and addressed results of IntelliJ "Inspect Code"
9/23/11 simplify 2D canvas code by moving surfaces and decorations into molecule nodes
9/23/11 document layout of canvases
9/23/11 fix "Bond Dipoles" label (plural) that was messed up in yesterday's changes
9/23/11 delete unnecessary scale factor from dipole nodes
9/22/11 create View control panels inline, since they differ
9/22/11 move getPixelColor to BufferedImageUtils
9/22/11 document the coordinate frame used by view components
9/22/11 rewrite and simplify DipoleNode and its subclasses
9/22/11 delete Bond.deltaElectronegativity property
# 0.00.25 (56852) Sep 22, 2011
9/22/11 change request: redesign of "Bond Character" indicator
9/22/11 increase font size in all control panels (similar to Balancing Act)
9/22/11 workaround for difference between background color of play area and Jmol viewer